# NewsAnalysis_3.0

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  check_matches.py  create_demo_db.py  news.db.corrupted_20260106_200632  pyproject.toml  run_daily.bat  test_logging.py  test_logging_simple.py  test_pipeline_debug.py
_bmad-output/analysis/: brainstorming-session-20260105.md  brainstorming-session-20260106-email-feature.md  brainstorming-session-20260108-topic-classification.md  brainstorming-session-20260114.md  brainstorming-session-20260126.md
config/: feeds.yaml  topics.yaml
config/prompts/: classification.yaml  deduplication.yaml  meta_analysis.yaml  summarization.yaml
config/templates/: german_report.md.j2
docs/: COMPANY_ENRICHMENT_PLAN.md  TROUBLESHOOTING.md  USER_GUIDE.md  duplicate-handling-analysis.md  index.md  project-scan-report.json
docs/Ideen/: für News-Digest_.msg  verbesserungen-brainstorming.md
docs/implementation-artefacts/: 1-1-two-column-newspaper-layout.md  1-3-dynamic-subject-line.md  tech-spec-email-digest-feature.md  tech-spec-phase1-visual-transformation.md  tech-spec-topic-classification-email-digest.md
docs/implementation_plan/: 01-system-architecture.md  02-llm-cost-optimization.md  03-modular-pipeline-design.md  04-database-design.md  05-python-project-structure.md  06-api-integration-strategy.md  07-configuration-management.md  08-testing-quality-assurance.md  09-deployment-operations.md  10-technology-stack.md  11-data-models-schemas.md  12-implementation-phases.md  13-swiss-news-sources.md  PROGRESS Phase 1.md  PROGRESS Phase 2.md  PROGRESS Phase 3.md  PROGRESS Phase 4.md  PROGRESS Phase 5.md  PROGRESS Phase 6.md  README.md
docs/planning-artefacts/: epics.md  prd.md
docs/project-documentation/: architecture.md  data-models.md  development-guide.md  project-overview.md  source-tree-analysis.md
docs/stories/: 20260104175700-multi-provider-llm-migration-plan.md  20260104211500-german-llm-output.md  20260105093000-code-review-fixes.md  20260105161300-lower-confidence-threshold.md  20260105164800-expand-classification-prompt.md  20260106191200-fix-fts-trigger-corruption-detection.md  20260106214843-add-email-digest-feature.md  20260106221700-improve-email-digest-format.md  20260106235500-add-semantic-duplicate-detection.md  20260107003900-fix-database-corruption-and-dedup.md  20260107112200-fix-digest-generation-reliability.md  20260107145200-add-daily-log-rotation.md  (+39 more)
scripts/: backup.sh  check_costs.py  create_guardian_logo_png.py  deploy.sh  extract_missing_images.py  init_db.py  maintenance.sh  migrate_phase5.py  run_full_production.py  run_production_pipeline.py  run_summarize_digest.py  run_test_pipeline.py  test_multi_provider.py
tests/: conftest.py  test_e2e.py
(+82 files in other folders)
